syntax = "proto3";

package general_messages;

message GeneralServerMessage {
    oneof payload {
        ServerOpponentConnectionMessage opponent_connection_message = 1;
        ServerHeartbeatRequest heartbeat_request = 2;
    }
}

message ServerOpponentConnectionMessage {
    bool opponent_connected = 1;
    bool initially_connected = 2;
}

message ServerHeartbeatRequest {
    
}

message GeneralPlayerMessage {
    oneof payload {
      PlayerHeartbeatResponse heartbeat_response = 1;
    }
}

message PlayerHeartbeatResponse {
    
}
