syntax = "proto3";

import "pregame/messages.proto";
import "game/messages.proto";
import "general/messages.proto";


package root_messages;

message PlayerMessage {
    uint64 timestamp = 1;
    oneof payload {
        pregame_messages.PregamePlayerMessage pregame_message = 2;
        game_messages.GamePlayerMessage game_message = 3;
        general_messages.GeneralPlayerMessage general_message = 4;
    }
}



message ServerMessage {
    uint64 timestamp = 1;
    oneof payload {
      general_messages.GeneralServerMessage general_message = 2;
        pregame_messages.PregameServerMessage pregame_message = 3;
        game_messages.GameServerMessage game_message = 4;
    }
}





